<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/searchJobId"
        android:title="@string/allas_kereses"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"
        />

    <item
        android:id="@+id/addJobButton"
        android:title="@string/allas_feladasa"
        android:icon="@drawable/ic__add"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/settingsButton"
        android:title="@string/beallitasok"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/logoutButton"
        android:title="@string/kijelentkezes"
        app:showAsAction="never"
        app:actionViewClass="android.widget.Button"
        />
</menu>