<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".AddJobActivity"
    android:id="@+id/add_job_page">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        android:text="@string/allas_hozzaadasa" />

    <EditText
        android:id="@+id/addJobNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:autofillHints="@string/allas_megnevezese"
        android:ems="10"
        android:hint="@string/allas_megnevezese"
        android:inputType="text"
        android:minHeight="48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/addJobPaymentTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:autofillHints="@string/fizetes"
            android:ems="10"
            android:hint="@string/fizetes"
            android:inputType="number"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="50dp"
            android:textSize="20sp"
            android:text="@string/per_ora" />

    </LinearLayout>

    <EditText
        android:id="@+id/addJobShortDescTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:autofillHints="@string/rovid_leiras"
        android:ems="10"
        android:hint="@string/rovid_leiras"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/addJobLongDescTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:autofillHints="@string/hosszu_leiras"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hosszu_leiras"
        android:inputType="textMultiLine"
        android:minHeight="48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:onClick="addJobToDatabase"
            android:text="@string/allas_hozzaadasa"
            android:textColor="#00796B" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:onClick="backToLoggedUserMainPage"
            android:text="@string/vissza"
            android:textColor="#00796B" />
    </LinearLayout>
</LinearLayout>
