<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/register_page"
        tools:context=".RegisterActivity">

        <TextView
            android:id="@+id/registerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/regisztracio"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/registerUsernameTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:textColorHint="#546E7A"
            android:hint="@string/felhasznalonev"
            android:inputType="text"
            android:minHeight="48dp"
            android:autofillHints="@string/felhasznalonev" />

        <EditText
            android:id="@+id/registerPasswordTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:textColorHint="#546E7A"
            android:hint="@string/jelszo"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:autofillHints="@string/jelszo" />

        <EditText
            android:id="@+id/registerPasswordAgainTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColorHint="#546E7A"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:hint="@string/jelszo_megerositese"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:autofillHints="@string/jelszo_megerositese" />

        <EditText
            android:id="@+id/EmailAddressTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:textColorHint="#546E7A"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:autofillHints="@string/email"
     />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:text="@string/regisztracio"
                android:onClick="registerUser"
                tools:ignore="DuplicateSpeakableTextCheck,UsingOnClickInXml" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:onClick="backToMainPage"
                android:text="@string/vissza" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>